--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
             public \
             package.json \
             package-lock.json \
-            next.config.js \
+            next.config.ts \
             deploy/
           tar -czf deploy.tar.gz deploy
 
